Enhanced build system

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <header>
             <nav class="limited-width">
-                <a href="example.org"><h1>Konstrukt</h1></a>
-                <a href="example.org">Showcase</a>
-                <a href="example.org">Downloads</a>
-                <a href="example.org">Packages</a>
+                <a href=""><h1>Konstrukt</h1></a>
+                <a href="">Showcase</a>
+                <a href="">Downloads</a>
+                <a href="">Packages</a>
             </nav>
         </header>
         <div class="limited-width content">
