--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <h2>Properties</h2>
 
                     <h3><code>loading (boolean)</code></h3>
-                    <p>Resource loaders are functions or other callables. ResourceManager.load passes the parameters to the loader, which shall return a table, nil if the requested resource doesn't exist or yield an error if something went wrong.</p>
+                    <p>Resource loaders are functions or other callables. <a>ResourceManager.load</a> passes the parameters to the loader, which shall return a table, nil if the requested resource doesn't exist or yield an error if something went wrong.</p>
 
                     <h3><code>foobar (string)</code></h3>
-                    <p>Resource loaders are functions or other callables. ResourceManager.load passes the parameters to the loader, which shall return a table, nil if the requested resource doesn't exist or yield an error if something went wrong.</p>
+                    <p>Resource loaders are functions or other callables. <code>ResourceManager.load</code> passes the parameters to the loader, which shall return a table, nil if the requested resource doesn't exist or yield an error if something went wrong.</p>
                 </div>
                 <div>
                     <h2>Methods</h2>
@@ -74,7 +74,6 @@
                 </div>
             </article>
             <footer>
-                <hr></hr>
                 <p>(c)2016 Henry Kielmann</p>
             </footer>
         </div>
