--- a/template.html
+++ b/template.html
@@ -28,8 +28,8 @@
                     </li>
                 {{/index}}
                 </ul>
-            </nav><!--
-            --><article role="main">
+            </nav>
+            <article role="main">
                 {{{content}}}
             </article>
         </main>
